Create template for person of metafour-starter

--- a/src/main/resources/templates/person/person.html
+++ b/src/main/resources/templates/person/person.html
@@ -1,13 +1,148 @@
 <!DOCTYPE html >
 <html xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<title>Something going to be special.......</title>
-	</head>
-	<body>
-		<h1>Welcome to Metafour! Hope you will enjoy working with us.</h1>
-		<h2>Try to make workable this screen as suggested in the project <a target="_blank" href="https://github.com/mfasia/metafour-starter">readme</a></h2>
-		<h3>See following add and update screen</h3>
-		<a th:href="@{/img/person_add.png}" target="_blank"><img alt="Add screen" th:src="@{/img/person_add.png}" height="500px"/></a>
-		<a th:href="@{/img/person_update.png}" target="_blank"><img alt="Update screen" th:src="@{/img/person_update.png}" height="500px"/></a>
-	</body>
+<head>
+<meta charset="utf-8" />
+<title th:text="#{person.title}">Person</title>
+<span th:substituteby="commons :: common-css"></span>
+</head>
+<body th:with="isNew=${#strings.isEmpty(person.id)}">
+	<div id="headerbar" class="navbar navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<button type="button" class="btn btn-navbar" data-toggle="collapse"
+					data-target=".nav-collapse">
+					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<span class="brand" th:text="#{person.brand}">Brand text</span>
+
+				<div class="nav-collapse collapse">
+					<ul class="nav pull-right" th:if="${isNew}">
+						<li><a class="viewmode updatebutton addbutton submit"
+							id="headerconfirmbutton" th:text="#{action.create}">Create</a></li>
+					</ul>
+					<ul class="nav pull-right" th:unless="${isNew}">
+						<li><a class="editmode" id="addbutton" th:href="@{'/person'}" th:text="#{action.add}">Add</a></li>
+						<li><a class="editmode" id="updatebutton" th:text="#{action.update}">Update</a></li>
+						<li class="nodisplay"><a class="viewmode updatebutton addbutton submit" id="headerconfirmbutton" th:text="#{action.save}">Save</a></li>
+						<li class="nodisplay"><a class="viewmode updatebutton" id="headercancelbutton" th:text="#{action.cancel}">Cancel</a></li>
+					</ul>
+					<form id="searchform" class="navbar-search pull-right" method="get" th:action="@{'/person/'}">
+						<input id="datasearchfield" class="typeahead search-query" type="text" placeholder="Search" data-provide="typeahead" th:attr="data-search-url=@{'/search/person/'}" /> <input
+							class="typeahead-val" type="hidden" name=" " value="" /> <input
+							class="typeahead-desc" type="hidden" value="" />
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="container" class="container">
+		<header id="overview" class="subhead">
+			<div class="subnav subnav-fixed" id="subnavscroll">
+				<ul class="nav nav-pills"></ul>
+			</div>
+		</header>
+		<form id="mainform" th:object="${person}" class="form-horizontal" method="POST" autocomplete="off" th:action="@{/person}">
+			<section>
+				<div class="row anything noheader">
+					<div class="span6 offset3">
+						<fieldset>
+							 <div class="control-group" th:if="*{id != null }">
+								<label for="description"  class="control-label" th:text="#{person.id}">Id</label> 
+								 <div class="controls">								
+									<input type="text" id="description" th:field="*{id}" data-required="required" class="include" readonly="readonly" data-maxlength="50"/>
+								</div> 
+							</div> 
+							<div class="control-group">
+								<label for="description" class="control-label" th:text="#{person.name}"> Name</label>
+								<div class="controls">
+									<input id="description" data-required="required" th:field="*{name}" type="text" data-maxlength="50" class="include" placeholder=" Name" />
+								</div>
+							</div>
+							<div class="control-group">
+    							<label for="dob" class="control-label" th:text="#{person.dob}">Date Of birth</label>
+    							<div class="controls">
+        							<div class="input-append">
+            							<input id="dob" class="input-small include con-datepicker" data-required="required" th:field="*{dateOfBirth}" type="text"  name="
+            							datepicker"/><span class="add-on"><i class="icon-calendar"></i></span>
+            							
+        							</div>
+    							</div>
+							</div>
+							
+							<div class="control-group">
+						    <label  for="groupofradios" class="control-label"  th:text="#{person.sex}">Sex</label>
+						 		<div class="controls">
+										<label class="radio inline">
+										<input type="radio" th:field="*{sex}" value="Male" id="groupofradios1" data-required="required" name="sex"  class="include"/> 
+										 Male
+									    </label>									 
+										<label class="radio inline">
+										<input type="radio" th:field="*{sex}" value="Female" id="groupofradios2" name="sex"  class="include"/> 
+										 Female
+									     </label>
+        						</div>					
+							</div>
+							<div class="control-group">
+								<div class="controls ">
+									<label class="checkbox"><input id="solocheck1" th:field="*{married}" value="Married" type="checkbox" name="solocheck1" class="include" /> Mairred </label>
+								</div>
+							</div>
+							<div class="control-group">
+								<label for="requiredselect" class="control-label"  th:text="#{person.highestdegree}">Highest degree</label>
+								<div class="controls">
+									<select id="requiredselect" th:field="*{highestDegree}" class="input-large include" name="requiredselect">
+										<option th:each="item : ${degrees}" th:value="${item}" th:text="${item}" />
+									</select>
+								</div>
+							</div>
+							<div class="control-group">
+								<label for="textarea" class="control-label"  th:text="#{person.addess}">Address</label>
+								<div class="controls">
+									<textarea id="textarea" name="textarea" th:field="*{address}" class="input-large include"></textarea>
+								</div>
+							</div>
+							<div class="control-group">
+								<label for="city" class="control-label" th:text="#{person.city}">City</label>
+								<div class="controls">
+									<div class="input-append">
+										<input class="typeahead include" id="destinationsearch" type="text" autocomplete="off" placeholder="City" data-search-url="/search/city/"
+											th:attr="data-search-url=@{'/search/city/'}" /><span
+											class="add-on"><i class="icon-search"></i></span> <input
+											class="typeahead-val" type="hidden" th:field="*{city}" />
+										<input class="typeahead-desc" type="hidden" value="" />
+									</div>
+								</div>
+							</div>
+							<div class="control-group">
+								<label for="requiredselect" class="control-label"  th:text="#{person.courses}">Courses</label>
+								<div class="controls">
+									<select id="arrvalList" th:field="*{courses}" class="include con-multiselect" multiple="multiple">	
+										<option th:each="item : ${courses}" th:value="${item.key}" th:text="${item.value}" />
+									</select>
+								</div>
+							</div>
+							<div class="control-group">
+    							<label for="startandenddatestart" class="control-label"  th:text="#{person.trainingdates}">Training dates</label>
+    							<div class="controls ">
+        							<div class="input-append inlineappends">
+            							<input id="startandenddatestart" class="input-small include con-startdate"  th:field="*{trainingStartDate}" type="text" data-datepair="startandenddates" name="startand
+            				            enddatesstart" placeholder="Sale start date"/><span class="add-on"><i class="icon-calendar"></i></span>	
+        							</div>
+        							<span class="add-on">to</span>
+        							<div class="input-append inlineappends">
+            							<input id="startandenddateend"  th:field="*{trainingEndDate}" type="text" data-datepair="startandenddates" name="startandendd
+            				             atesend" placeholder="Sale end date" class="input-small include con-enddate"/><span class="add-on"><i class="icon-calendar"></i></span>						
+        							</div>
+    							</div>
+						  </div>
+						</fieldset>
+					</div>
+				</div>
+			</section>
+		</form>
+	</div>
+	<span th:substituteby="commons :: common-html"></span>
+	<span th:substituteby="commons :: common-js"></span>
+</body>
 </html>
